# dxil-spirv

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  DESCRIPTORS.md  README.md  build_dxc.sh  cfg_structurizer.cpp  cfg_structurizer.hpp  checkout_dxc.sh  checkout_llvm.sh  copy_reference_shaders.py  descriptor_qa.cpp  descriptor_qa.hpp  download_dxc.sh  dxbc_spirv_sandbox.cpp  dxil-disasm.py  dxil.hpp  dxil_converter.cpp  dxil_converter.hpp  dxil_extract.cpp  dxil_parser.cpp  dxil_parser.hpp  dxil_parser_test.cpp  dxil_spirv.cpp  dxil_spirv_c.cpp  dxil_spirv_c.h  format_all.sh  ir.cpp  ir.hpp  link.T  llvm_bitcode_parser.cpp  llvm_bitcode_parser.hpp  memory_stream.cpp  memory_stream.hpp  meson.build  node.cpp  node.hpp  node_pool.cpp  node_pool.hpp  (+11 more)
bc/: CMakeLists.txt  cast.hpp  context.cpp  context.hpp  data_structures.hpp  disassembler.cpp  dxil_bytecode.cpp  dxil_bytecode.h  function.cpp  function.hpp  instruction.cpp  instruction.hpp  iterator.hpp  llvm_bitreader.h  llvm_decoder.cpp  llvm_decoder.h  metadata.cpp  metadata.hpp  module.cpp  module.hpp  module_containers.hpp  module_dxbc_ir.cpp  type.cpp  type.hpp  value.cpp  value.hpp
debug/: logging.cpp  logging.hpp
misc/: structurize_test.cpp
opcodes/: converter_impl.hpp  opcodes.hpp  opcodes_dxil_builtins.cpp  opcodes_dxil_builtins.hpp  opcodes_llvm_builtins.cpp  opcodes_llvm_builtins.hpp
opcodes/dxil/: dxil_ags.cpp  dxil_ags.hpp  dxil_arithmetic.cpp  dxil_arithmetic.hpp  dxil_buffer.cpp  dxil_buffer.hpp  dxil_common.cpp  dxil_common.hpp  dxil_compute.cpp  dxil_compute.hpp  dxil_geometry.cpp  dxil_geometry.hpp  dxil_mesh.cpp  dxil_mesh.hpp  dxil_nvapi.cpp  dxil_nvapi.hpp  dxil_pixel_ops.cpp  dxil_pixel_ops.hpp  dxil_ray_tracing.cpp  dxil_ray_tracing.hpp  dxil_resources.cpp  dxil_resources.hpp  dxil_sampling.cpp  dxil_sampling.hpp  dxil_tessellation.cpp  dxil_tessellation.hpp  dxil_waveops.cpp  dxil_waveops.hpp  dxil_workgraph.cpp  dxil_workgraph.hpp
pkg-config/: dxil-spirv-c-shared.pc.in
reference-dxbc/: test_arithmetic_bool.asm  test_arithmetic_bool.glsl  test_arithmetic_fp16_compare.asm  test_arithmetic_fp16_compare.glsl  test_arithmetic_fp16_packing.asm  test_arithmetic_fp16_packing.glsl  test_arithmetic_fp16_packing_legacy.asm  test_arithmetic_fp16_packing_legacy.glsl  test_arithmetic_fp16_scalar.asm  test_arithmetic_fp16_scalar.glsl  test_arithmetic_fp16_vector.asm  test_arithmetic_fp16_vector.glsl  test_arithmetic_fp32.asm  test_arithmetic_fp32.glsl  test_arithmetic_fp32_compare.asm  test_arithmetic_fp32_compare.glsl  test_arithmetic_fp32_precise.asm  test_arithmetic_fp32_precise.glsl  test_arithmetic_fp32_special.asm  test_arithmetic_fp32_special.glsl  test_arithmetic_fp64.asm  test_arithmetic_fp64.glsl  test_arithmetic_fp64_compare.asm  test_arithmetic_fp64_compare.glsl  test_arithmetic_fp64_packing.asm  test_arithmetic_fp64_packing.glsl  test_arithmetic_int_extended.asm  test_arithmetic_int_extended.glsl  test_arithmetic_sint16_compare.asm  test_arithmetic_sint16_compare.glsl  test_arithmetic_sint16_scalar.asm  test_arithmetic_sint16_scalar.glsl  test_arithmetic_sint16_vector.asm  test_arithmetic_sint16_vector.glsl  test_arithmetic_sint32.asm  test_arithmetic_sint32.glsl  test_arithmetic_sint32_compare.asm  test_arithmetic_uint16_compare.asm  test_arithmetic_uint16_scalar.asm  test_arithmetic_uint16_scalar.glsl  (+436 more)
reference/shaders/: stage-input-output.frag
runtime-tests/: CMakeLists.txt  dxil_workgraph_sandbox.cpp
runtime-tests/shaders/: data_structures.h  distribute_payload_offsets.comp  distribute_workgroups.comp  test.dxil  test.hlsl
shaders/: stage-input-output.frag
shaders/ags/: ags.ssbo.comp  cs_constexpr_wmma_gep.sm66.full-wmma.ssbo.comp  cs_wmma_copy_transpose_fp16.sm66.ssbo.full-wmma.comp  cs_wmma_fp32_fp16_conversions.sm66.ssbo.full-wmma.comp  cs_wmma_fp32_fp8_conversions.sm66.ssbo.nv-coopmat2.comp  cs_wmma_store_phi.sm66.ssbo.comp  wmma_ags.h
shaders/alloca-opts/: bad-stride.frag  double-array-load.frag  float4-array-load.root-constant.frag  float4-array-load.root-descriptor.root-constants.frag  load-different.frag  local-root-constants.local-root-signature.rgen  matrix-load.frag  missing-first.frag  missing-last-element.frag  out-of-order-load.frag  store-after-load.frag  uint4-array-load.frag
shaders/asm/: bfi.bc.dxil  cbv.no-legacy-cbuf-layout.sm66-heaps-single-alias.bc.dxil  cbv.no-legacy-cbuf-layout.sm66-heaps.bc.dxil  constant-struct-aggregate.bc.dxil  control-flow-multi-break-with-non-idom-loop-header.dxil  ibfe.bc.dxil  ubfe.bc.dxil
shaders/auto-barrier/: complex-loop.auto-group-shared-barrier.comp  inner-to-inner.auto-group-shared-barrier.comp  inner-to-outer.auto-group-shared-barrier.comp  outer-to-inner.comp  single-block-loop.comp  single-block.auto-group-shared-barrier.comp
shaders/control-flow/: branch-return-2.comp  branch-return.comp  branch.comp  conditional-break-into-if-else-if-ladder-2.comp  conditional-break-into-if-else-if-ladder.comp  dual-inner-loop-early-return.comp  if-else-if-into-continue.comp  inner-loop-early-return.comp  interleaved-unrolled-loop-breaks.comp  loop-break-2.comp  loop-break.comp  loop-continue-2.comp  loop-continue-3.comp  loop-continue.comp  loop-inside-infinite-loop-2.frag  loop-inside-infinite-loop.frag  loop-return.comp  loop.comp  nested-loop-break-2.comp  nested-loop-break.comp  nested-loop.comp  nested-loop.invalid.comp  selection-merge-split-post-domination.frag  switch-continue.frag  switch-merge-into-other-merge.comp  switch-shared-header-with-loop.comp  wave-size-dependent-loop-unroll.comp
shaders/descriptor_qa/: acceleration-structure.bindless.ssbo-rtas.local-root-signature.descriptor-qa.rgen  descriptor_qa.bindless.cbv-as-ssbo.descriptor-qa.comp  descriptor_qa.bindless.descriptor-qa.sm66.comp  early-2.bindless.descriptor-qa.frag  early-3.bindless.descriptor-qa.frag  early-4.bindless.descriptor-qa.frag  early-5.bindless.descriptor-qa.frag  early-heap.descriptor-qa.sm66.frag  early.bindless.descriptor-qa.frag
shaders/dxil-builtin/: acos.frag  (+217 more)
util/: thread_local_allocator.cpp  thread_local_allocator.hpp
(+1106 files in other folders)
